# dockstring

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .style.yapf  CHANGELOG.md  DEVELOPMENT.md  README.md  __init__.py  dockstring_example.ipynb  environment.yml  pyproject.toml  pytest.ini  setup.py  test-environment.yml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  publish-to-test-pypi.yml  python-package-conda.yml  run-tests.yml
dockgym/: __init__.py  dockgym.py  view.py
dockgym/receptors/: ABL1_conf.txt  ACHE_conf.txt  ADORA2A_conf.txt  ADRB1_conf.txt  AKT1_conf.txt  AKT2_conf.txt  CA2_conf.txt  CDK2_conf.txt  CYP2C9_conf.txt  CYP3A4_conf.txt  DHFR_conf.txt  DRD2_receptor.pdbqt  DRD3_receptor.pdbqt  EGFR_conf.txt  ESR1_conf.txt  ESR2_receptor.pdbqt  F10_conf.txt  F2_conf.txt  HSD11B1_conf.txt  IGF1R_conf.txt  KIT_conf.txt  MAOB_conf.txt  MAP2K1_conf.txt  MAP2K1_receptor.pdbqt  MAPK14_conf.txt  MAPKAPK2_conf.txt  MET_conf.txt  MMP13_receptor.pdbqt  NOS1_conf.txt  PDE5A_conf.txt  PGR_conf.txt  PLK1_conf.txt  PPARA_conf.txt  PPARG_conf.txt  PTGS2_conf.txt  PTK2_conf.txt  REN_conf.txt  ROCK1_conf.txt  THRB_conf.txt
dockgym/resources/receptors/: ACHE_conf.txt  AKT1_conf.txt  CDK2_receptor.pdbqt  CSF1R_conf.txt  CSF1R_receptor.pdbqt  HSP90AA1_receptor.pdbqt  PPARG_conf.txt  PTPN1_conf.txt
dockgym/targets/: ABL1_target.pdbqt  ADAM17_target.pdbqt  AKT2_target.pdbqt  AR_conf.txt  CA2_conf.txt  CASP3_target.pdbqt  CDK2_conf.txt  DHFR_target.pdbqt  DPP4_conf.txt  ESR2_conf.txt  F2_conf.txt  F2_target.pdbqt  FGFR1_conf.txt  HMGCR_conf.txt  HSP90AA1_conf.txt  JAK2_conf.txt  KDR_target.pdbqt  LCK_conf.txt  MAPK14_conf.txt  MAPK1_conf.txt  NOS1_target.pdbqt  NR3C1_conf.txt  PARP1_conf.txt  PARP1_target.pdbqt  PPARD_conf.txt  PTPN1_target.pdbqt  REN_conf.txt  THRB_target.pdbqt
dockgym/utils/: __init__.py  utils.py  view_search_box.py
dockstring/: __init__.py  dataset.py  dockstring.py  errors.py  target.py  utils.py
dockstring/benchmarks/: __init__.py  original.py  utils.py
dockstring/resources/: view_search_box.py
dockstring/resources/data/: quality_metrics.tsv  quality_metrics_aug.tsv
dockstring/resources/data/auc/ABL1/: scores_0.tsv
dockstring/resources/data/auc/ACHE/: scores_0.tsv
dockstring/resources/data/auc/ADORA2A/: scores_0.tsv
dockstring/resources/data/auc/ADRB1/: scores_0.tsv
dockstring/resources/data/auc/AKT2/: scores_0.tsv
dockstring/resources/data/auc/AR/: scores_0.tsv  scores_1.tsv
dockstring/resources/data/auc/BACE1/: scores_0.tsv
dockstring/resources/data/auc/CA2/: scores_0.tsv
dockstring/resources/data/auc/CASP3/: scores_0.tsv
dockstring/resources/data/auc/CDK2/: scores_0.tsv
dockstring/resources/data/auc/CSF1R/: scores_0.tsv
dockstring/resources/data/auc/CYP2C9/: scores_0.tsv  scores_2.tsv
dockstring/resources/data/auc/CYP3A4/: scores_1.tsv  scores_2.tsv  scores_3.tsv
dockstring/resources/data/auc/DHFR/: scores_0.tsv
dockstring/resources/data/auc/DPP4/: scores_0.tsv
dockstring/resources/data/auc/DRD2/: scores_0.tsv  scores_3.tsv
dockstring/resources/data/auc/DRD3/: scores_0.tsv  scores_1.tsv
dockstring/resources/targets/: ABL1_conf.txt  ACHE_conf.txt  ADAM17_conf.txt  ADORA2A_conf.txt  ADRB1_conf.txt  ADRB2_conf.txt  AKT1_conf.txt  AKT1_target.pdbqt  AKT2_conf.txt  AR_conf.txt  AR_target.pdbqt  BACE1_conf.txt  CA2_conf.txt  CA2_target.pdbqt  CASP3_conf.txt  CDK2_conf.txt  CSF1R_conf.txt  CYP2C9_conf.txt  CYP2C9_target.pdbqt  CYP3A4_conf.txt  DHFR_conf.txt  DPP4_conf.txt  DPP4_target.pdbqt  DRD2_conf.txt  DRD3_conf.txt  EGFR_conf.txt  ESR1_conf.txt  ESR1_target.pdbqt  ESR2_conf.txt  F10_conf.txt  F10_target.pdbqt  F2_conf.txt  FGFR1_conf.txt  GBA_conf.txt  GBA_target.pdbqt  HMGCR_conf.txt  HMGCR_target.pdbqt  HSD11B1_conf.txt  HSD11B1_target.pdbqt  HSP90AA1_conf.txt  (+36 more)
dockstring/targets/: ACHE_target.pdbqt  BACE1_target.pdbqt  CASP3_conf.txt  EGFR_target.pdbqt  GBA_conf.txt  IGF1R_target.pdbqt  LCK_target.pdbqt  MAOB_conf.txt  MAOB_target.pdbqt  MAPKAPK2_target.pdbqt  PTPN1_conf.txt  REN_target.pdbqt  SRC_target.pdbqt
dockstring/utils/: __init__.py  utils.py
docs/: conf.py  index.rst
infra/: build_docker_image.sh  dockstring.dockerfile  repro-environment.yml  run_linters.sh  run_tests.sh  run_tests_docker.sh
receptors/: ACE_conf.txt  ADAM17_conf.txt  ADA_conf.txt  ADORA2A_conf.txt  ADORA2A_receptor.pdbqt  ADRB1_conf.txt  ADRB1_receptor.pdbqt  ADRB2_conf.txt  ADRB2_receptor.pdbqt  AHCY_conf.txt  AKR1B1_conf.txt  AR_conf.txt  BACE1_conf.txt  BRAF_conf.txt  CA2_conf.txt  CASP3_conf.txt  COMT_conf.txt  CXCR4_conf.txt  CYP2C9_conf.txt  CYP3A4_receptor.pdbqt  DHODH_conf.txt  DPP4_conf.txt  DRD2_conf.txt  DRD3_conf.txt  ESR1_conf.txt  ESR2_conf.txt  F7_conf.txt  FABP4_conf.txt  FDPS_conf.txt  FGFR1_conf.txt  FGFR1_receptor.pdbqt  FKBP1A_conf.txt  GBA_conf.txt  GCK_conf.txt  GRIA2_conf.txt  GRIK1_conf.txt  HDAC2_conf.txt  HDAC8_conf.txt  HMGCR_conf.txt  HSD11B1_conf.txt  (+40 more)
scripts/: add_logp_qed.py  compute_quality_metrics.py  download_configuration_files.sh  download_crystal_ligand_files.sh  download_receptor_files.sh  plot_correlation.py  plot_pca.py  plot_violins.py  prepare_receptor_files.sh  rename_receptors_to_targets.sh  search_boxes.py
src/: dockgym.py  utils.py
tasks/: tasks.py  tests.py
tests/: test_benchmarks.py  test_dataset_matching.py  test_pdbqt_parser.py  test_pytest.py  test_targets.py
tests/resources/: ligand.pdbqt  vina.out
tutorials/: 1_Docking_risperidone_against_DRD2.ipynb  2_dockstring_dataset.ipynb  2_visualizing_dataset_poses.ipynb  3_dummy_regression_benchmark.ipynb  simple_example.py
tutorials/data/: ABL1_sample.tar.xz
utils/: view_search_box.py
(+43 files in other folders)
