[build-system]
# Minimum requirements for the build system to execute
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dockstring"
authors = [
    {name = "Miguel Garcia-Ortegon", email = "mg770@cam.ac.uk"},
    {name = "Gregor Simm"},
    {name = "Austin Tripp", email = "ajt212@cam.ac.uk"},
]
description = """\
Package for easy ligand preparation and docking with AutoDock Vina against \
a highly-curated selection of 58 protein targets. One of the three \
components of the DOCKSTRING bundle (package, dataset, and benchmark tasks).\
"""
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dynamic = ["version"]  # version is set from git tags

# True dependencies are openbabel and rdkit.
# However, openbabel seems to not be installable via pip (see e.g. https://github.com/openbabel/openbabel/issues/2571).
# Therefore, we suggesting installing it via conda.
# Since we are excluding openbabel from the dependencies we decided to exclude rdkit too
# and just leave installation up to the user.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit"
]

[tool.setuptools]
# Specifies location of package to install
# Guidance from: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
packages = ["dockstring"]

[tool.setuptools.package-data]
# Include type hints for mypy when installing package.
"dockstring" = ["py.typed"]

[tool.setuptools_scm]

[tool.mypy]
python_version = 3.9  # pin modern python version
ignore_missing_imports = true
check_untyped_defs = true

[tool.yapf]
column_limit=120
indent_width=4
blank_line_before_nested_class_or_def = false

[tool.ruff]
line-length = 120
# Check https://beta.ruff.rs/docs/rules/ for full list of rules
select = [
  "E", "W",  # pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
ignore = [
  # E501: Line too long -- triggered by comments and such.
  "E501",
]
